perf: prevent double-tap zoom on iOS and fix outline style on edge #212

--- a/components/counter/src/styles/color.scss
+++ b/components/counter/src/styles/color.scss
@@ -30,7 +30,7 @@
   background-color: var(--ds-auro-counter-control-ui-bkg);
 }
 
-::part(counterControl) {
+:host::part(counterControl) {
   &:focus-visible {
     outline-color: var(--ds-auro-counter-control-border-active);
   }
